<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="1080dp"
    android:maxHeight="1920dp"
    android:minWidth="720dp"
    android:minHeight="1280dp"
    tools:context="com.ec16358.examcompanion.HomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/HomeGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:padding="8dp"
        app:layout_constraintHeight_percent="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="100">

        <Button
            android:id="@+id/HomePomodoroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pomodoroHomeButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/HomeFlashCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_cardsHomeButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/HomeScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scheduleHomeButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/HomePointsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointsHomeButton"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
