<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="2dp"
android:orientation="vertical"
android:clipToPadding="false">
<!-- android:outlineAmbientShadowColor="@color/design_default_color_on_secondary"
 android:outlineSpotShadowColor="@color/design_default_color_on_secondary" > -->


<androidx.gridlayout.widget.GridLayout
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/idcustomDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/date_placeholder"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_column="0"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_row="0"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/idEventName_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_light"
        android:padding="4dp"
        android:text="@string/_eventname"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/design_default_color_on_secondary"
        app:layout_column="0"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_row="1"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/idEventType_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_light"
        android:padding="4dp"
        android:text="@string/_eventtype"
        app:layout_column="0"
        app:layout_columnSpan="1"
        app:layout_columnWeight="1"
        app:layout_row="2"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/idEventTime_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_light"
        android:padding="4dp"
        android:text="@string/eventTime"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="3"
        app:layout_rowWeight="1" />


</androidx.gridlayout.widget.GridLayout>

</LinearLayout>