<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home"
    tools:showIn="@layout/activity_home">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rowCount="6">

        <Button
            android:id="@+id/idHomePomodoroButton"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:drawablePadding="115sp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/pomodoroHomeButton"
            android:textColor="#696969"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/idHomeFlashcardsButton"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/flash_cardsHomeButton"
            android:textColor="#696969"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/idHomePointsButton"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/pointsHomeButton"
            android:textColor="#696969"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/idHomeScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="3dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/scheduleHomeButton"
            android:textColor="#696969"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />


    </androidx.gridlayout.widget.GridLayout>
</androidx.core.widget.NestedScrollView>