<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:outlineAmbientShadowColor="@color/design_default_color_on_secondary"
    android:outlineSpotShadowColor="@color/design_default_color_on_secondary">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/idEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:padding="4dp"
            android:text="@string/_eventname"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/idEventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:padding="4dp"
            android:text="@string/_eventtype"
            app:layout_column="0"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/idEventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:padding="4dp"
            android:text="@string/eventTime"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />


    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>