<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        app:columnCount="8"
        app:rowCount="9">

        <!--Cancel button-->
        <Button
            android:id="@+id/idCancelCreateEvent"
            android:accessibilityHeading="false"
            android:background="@android:color/transparent"
            android:fontFamily="@font/actor"

            android:onClick="cancelButtonClicked"
            android:text="@string/cancel_create_event"
            android:textColor="#808080"
            android:textSize="30sp"

            app:layout_column="0"
            app:layout_columnSpan="1"

            app:layout_row="0"
            app:layout_rowSpan="1"
            app:layout_rowWeight="0.5" />

        <!--Save button-->
        <Button
            android:id="@+id/idEventSave"

            android:layout_marginTop="20dp"

            android:layout_marginRight="20dp"

            android:background="@drawable/rounded_button"
            android:onClick="saveButtonClicked"
            android:text="@string/saveEvent"

            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:layout_column="6"

            app:layout_columnSpan="2"
            app:layout_row="0"
            app:layout_rowSpan="1"
            app:layout_rowWeight="0.5" />

        <!--Event title edit text-->
        <EditText
            android:id="@+id/idEventTitle"
            android:imeOptions="actionDone"
            android:background="@null"
            android:hint="@string/enter_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="25dp"

            android:paddingRight="25dp"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_columnSpan="8"

            app:layout_columnWeight="8"
            app:layout_gravity="top"
            app:layout_row="1"
            app:layout_rowSpan="1"
            app:layout_rowWeight="2"
            tools:targetApi="o" />

        <!--Event type spinner-->
        <Spinner
            android:id="@+id/idEventType"
            android:layout_marginLeft="10dp"
            android:drawSelectorOnTop="true"

            android:entries="@array/event_type"
            android:spinnerMode="dropdown"
            android:theme="@style/Widget.AppCompat.TextView.SpinnerItem"

            app:layout_column="0"
            app:layout_columnSpan="8"
            app:layout_columnWeight="8"
            app:layout_gravity="top"
            app:layout_row="2"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <!--Event date textView-->
        <TextView
            android:id="@+id/idSelectDate"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"

            android:text="@string/select_date"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnSpan="4"

            app:layout_columnWeight="4"
            app:layout_row="3"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <!--Event start time textView-->
        <TextView
            android:id="@+id/idStartTime"
            android:text="@string/select_start_time"
            android:textSize="20sp"

            app:layout_column="4"
            app:layout_columnSpan="4"
            app:layout_columnWeight="4"
            app:layout_row="3"

            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <!--Event end time textView-->
        <TextView
            android:id="@+id/idEndTime"
            android:text="@string/select_end_time"
            android:textSize="20sp"

            app:layout_column="4"
            app:layout_columnSpan="4"
            app:layout_columnWeight="4"
            app:layout_row="4"

            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <!--Event type spinner-->
        <Spinner
            android:id="@+id/idEventRepeat"
            android:layout_marginLeft="10dp"
            android:drawSelectorOnTop="true"

            android:entries="@array/event_repeat"
            android:spinnerMode="dropdown"
            android:theme="@style/Widget.AppCompat.TextView.SpinnerItem"

            app:layout_column="0"
            app:layout_columnSpan="8"
            app:layout_columnWeight="8"
            app:layout_gravity="top"
            app:layout_row="5"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1" />

        <!--Event location edit text-->
        <EditText
            android:id="@+id/idEventLocation"
            android:imeOptions="actionDone"
            android:background="@null"
            android:hint="@string/enter_location"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"

            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnSpan="8"
            app:layout_columnWeight="8"

            app:layout_row="6"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1"
            tools:targetApi="o" />

        <!--Event colour radio buttons-->
        <RadioGroup
            android:id="@+id/idEventRadioGroup"
            android:orientation="horizontal"
            app:layout_column="0"
            app:layout_columnSpan="8"
            app:layout_columnWeight="1"

            app:layout_gravity="center_vertical"

            app:layout_row="7"
            app:layout_rowSpan="1"
            app:layout_rowWeight="1">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#2E3A9F"
                android:buttonTint="#2E3A9F"
                android:checked="true" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/cyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#42d4f4"
                android:buttonTint="#42d4f4" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#3cb44b"
                android:buttonTint="#3cb44b" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#ffe119"
                android:buttonTint="#ffe119" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#f58231"
                android:buttonTint="#f58231" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#e6194B"
                android:buttonTint="#e6194B" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#f032e6"
                android:buttonTint="#f032e6" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:backgroundTint="#911eb4"
                android:buttonTint="#911eb4" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </RadioGroup>

        <!--Event notes edit text-->
        <EditText
            android:id="@+id/idEventNotes"
            android:background="@null"
            android:hint="@string/enter_notes"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"

            android:textSize="20sp"
            app:layout_column="0"
            app:layout_columnSpan="8"
            app:layout_columnWeight="8"

            app:layout_row="8"
            app:layout_rowSpan="1"
            app:layout_rowWeight="3"
            tools:targetApi="o" />

    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>